--- a/pa1/doc/pa1.tex
+++ b/pa1/doc/pa1.tex
@@ -108,19 +108,41 @@ For the sake of analysis, assume that comparing, adding, or multiplying any pair
 \end{problem}
 
 \textbf{Recursive Formulation}
-Let $LSA(k)$ denote the function that can find the subarray of $A[k:n]$ with the largest sum of its elements. $LSA$ returns a pair of the sum of the largest subarray and its prefix sum in the aforementioned order. For example, let $A = [-1,2,1]$, $LSA(1) = (3,-1)$, with the two last elements as the largest subarray and the first element as the prefix. 
 
+First, let $MS(k)$ denote the function that find the nonempty contiguous subarray with the largest sum in $A[k:n]$. Second, let $MP(k)$ finds the contiguous subarray that starts from $k$ and has the largest sum. Note that $MPs$ can be empty. For example, let $A = [-3,-1,2,1]$, $MS(2) = 3, MP(2) = 2$, with the two last elements as MS and the last three elements as MP. However, $MS(1) = 3, MP(1) = 0$ with the two last elements as MS and the empty MP.
 
-$LSA$ can be defined recursively as follows:
+$MP$ and $MS$ can be defined recursively as follows:
 
-\tiny{
+% \small{
+%     \[
+%         LSA(k)=
+%         \begin{centercases}
+%             (A[k], max(0, A[k]))               & k = n \\
+%             (0,0)               & k > n \lor k \leq 0 \\
+%             (max(A[k], A[k] + LSA(k+1)[1], LSA(k+1)[0]),                &otherwise \\
+%             max(0, LSA(k+1)[1]))        & 
+%         \end{centercases}
+%         \]
+% }
+
+\small{
     \[
-        LSA(k)=
+        MP(k)=
         \begin{centercases}
-            (0,0)               & k > n \land k < 1 \\
-            (A[k],0)         & A[k] > LSA(k+1)[0] \land LSA(k+1)[0] < -LSA(k+1)[1] \\
-            (A[k] + LSA(k+1)[0] + LSA(k+1)[1],0) & A[k] \geq -LSA(k+1)[1] \land LSA(k+1)[0] \geq -LSA(k+1)[1] \\
-            (LSA(k+1)[0], A[k] + LSA(k+1)[1]) & A[k] < -LSA(k+1)[1] \land A[k] < LSA(k+1)[0] \\
+            0                          & k > n \lor k \leq 0 \\
+            max(0, A[k])               & k = n \\
+            max(0, A[k] + MP(k+1))        & otherwise
+        \end{centercases}
+        \]
+}
+
+\small{
+    \[
+        MS(k)=
+        \begin{centercases}
+            0                  & k > n \lor k \leq 0 \\
+            A[k]               & k = n \\
+            max(A[k], A[k] + MP(k+1), MS(k+1))     & otherwise \\
         \end{centercases}
         \]
 }
@@ -129,47 +151,45 @@ $LSA$ can be defined recursively as follows:
 
 \textbf{Proof/Explanation}
 
-For simplicity, in this section, let $LSA(k)$ denote the subarray of interest only, but not its prefix. This problem's optimal substructure property can be described as follows. The optimal solution to the problem with $A[k:n]$ can be found based on the optimal solution to the problem with $A[k+1:n]$. In particular, assume that we know the optimal solution to the problem of $A[k+1:n]$, adding $A[k]$ to the problem results in two new candidate largest subarrays. First, $A[k]$ can be combined with $LSA(k+1)$ to create a new solution. Note that this comes with the cost of the sum of the prefix of $LSA(k+1)$ because the new solution has to be contiguous. The second candidate is $A[k]$ itself. $LSA(k)$ has the largest sum among these two new candidates and $LSA(k+1)$. Note that the combination solution is prioritized when a tie happens in order to open up opportunities for further combination.
+Proof 1a. For MP's recursive fomular, the first line prevents the algorithm to get out of the boundary of the subject array. In the base case on the second line, there is only one element in $A[k:k]$, so the result must be either empty or $A[k]$. For the inductive step, assume that $MP(k+1)$ returns the max prefix (contiguous subarray that starts from $k+1$ and has the largest sum) of $A[k]$, then $MP[k]$ must be $max(0, A[k] + MP(k+1))$. Because if there exists a larger prefix $A[k:j]$ so that $sum(A[k:j]) = A[k] + sum(A[k+1:j]) > A[k] + MP(k+1)$, then $sum(A[k+1:j] > MP(k+1))$, which contradicts the assumption that $MP(k+1)$ is the max prefix of $A[k+1:n]$. Proof completes.
 
-We can use proof by contradiction to prove this algorithm. Assume that there exists a better solution $LSA'(k)$ that is not one of the three candidates, $A[k]$, the combination, and $LSA(k+1)$. First, because $LSA'(k)$ is not $A[k]$, it must be a subarray of $A[k+1:n]$. This makes $LSA'(1)$ the subarray of the largest sum of $A[k+1:n]$ because $sum(LSA'(k)) > sum(LSA(k+1))$ based on our assumption. However, this contradicts another assumption that $LSA(2)$ is the optimal solution to the problem with $A[2:n]$. The proof completes!
+Proof 1b. For MS's recursive formula, the first line prevents the algorithm to get out of the boundary of the subject array. The second line is the base case in which we consider one element at the right end of the array. $A[k]$ is the only non-empty subarray in $A[k:k]$ so it must also be MS of $A[k:k]$. For the inductive step, assume that $MS(k+1)$ returns the max subarray of $A[k+1:n]$ and $MS(k+1)$ returns that max prefix, $MS(k)$ is guaranteed to be the maximum of the three case mentioned in the third line of the $MS(k)$ formula. Because if there exists a better solution, that is a contiguous subarray whose sum is greater than all of these cases, it will either contain $A[k]$ or not. In the first case when the subarray $S1$ does not contain $A[k]$, it must be within $A[k+1:n]$. $sum(S1) > MS(k+1)$ contradicts the assumption that $MS(k+1)$ is the max subarray of $A[k+1:n]$, hence there not exists such an subarray. In the second case where the subarray $S2$ contains $A[k]$, it can be decomposed to $sum(S2) = A[k] + sum(A[k+1:j])$. Again, $sum(S2) > A[k] + MP(k+1) \iff sum(A[k+i:j]) > MP(k+1)$ contradicts the assumption that $MP(k+1)$ is the max prefix, thus there not exists such an subarray. Proof completes!
 
 \newpage
 \textbf{Pseudocode}
-
-Observe that $LSA(k)$ only depends on $LSA(k+1)$, we can implement this algorithm iteratively from $LSA(n)$ to $LSA(0)$. The solution is $LSA(0)$.
-
+Because $MS(k)$ only depends on $MS(k+1)$ and $MP(k)$ only depends on $MP(k+1)$, we can implement them iteratively in the same loop.
 
 \begin{algorithm}
-\caption{$LSA(A[1:n])$}\label{alg:LSA}
+\caption{$(A[1:n])$}\label{alg:LSA}
 \begin{algorithmic}
-    \State $last\_prefix\_sum \gets 0$\
-    \State $last\_largest\_sum \gets 0$\
-    \State $k \gets n$\;
+    \State $ms \gets A[k]$\
+    \State $mp \gets max(0, A[k])$\
+    \State $k \gets n - 1$\;
     
     \While{$k \geq 1$}
-        \State $combined\_sum \gets A[k] + last\_largest\_sum + last\_prefix\_sum$
+        \State $mp \gets mp + A[k]$
 
-        \State $max\_largest\_sum \gets max(A[k], last\_largest\_sum, combined\_sum)$\
+        \State $max\_sum \gets max(A[k], ms, mp)$\
 
-        \If{$combined\_sum == max\_largest\_sum$}
-            \State $last\_prefix\_sum \gets 0$\
-            \State $last\_largest\_sum \gets combined\_sum$\
-        \ElsIf{$A[k] == max\_largest\_sum$}
-            \State $last\_prefix\_sum \gets 0$\
-            \State $last\_largest\_sum \gets A[k]$\
-        \ElsIf{$last\_largest\_sum == max\_largest\_sum$}
-            \State $last\_prefix\_sum \gets last\_prefix\_sum + A[k]$\
+        \If{$mp == max\_sum$}
+            \State $ms \gets mp$\
+        \ElsIf{$A[k] == max\_sum$}
+            \State $ms \gets A[k]$\
+            \State $mp \gets A[k]$\
+        \Else
+            \State $mp \gets max(0, mp)$\
         \EndIf
 
         \State $k \gets k - 1$
     \EndWhile
 
-    \Return $last\_largest\_sum$
+    \Return $ms$
 \end{algorithmic}
 \end{algorithm}
 
 \textbf{Runing Time and Space Analysis}
-There are n iteration, each of which has constant number of operations, hence the algorithm has $O(n)$ time complexity. Furthermore, the algorithm uses $O(1)$ space.
+There are n iterations, each of which has constant number of operations, hence the algorithm has $O(n)$ time complexity. Furthermore, the algorithm uses $O(1)$ space.
+
 %==============================================================================%
 \newpage
 \begin{problem}{2} 
